--- a/myor/css/main.css
+++ b/myor/css/main.css
@@ -1,10 +1,13 @@
 /* Import Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 /* GLOBAL STYLES */
 body {
     margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -28,28 +31,31 @@ header {
     padding: .5rem;
 }
 
-.header-nav {
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.navbar {
     max-width: 1200px;
     width: 100%;
-    margin: 0 auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 1rem;
-    box-sizing: border-box;
 }
 
-.nav-links {
+.nav-list {
     display: flex;
-    gap: 5rem;
+    justify-content: center;
+    flex-wrap: wrap;
     list-style: none;
+    gap: 5rem;
     margin: 0;
     padding: 0;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
-.nav-links a {
+.nav-list a {
     text-decoration: none;
     color: white;
     font-size: 1.5rem;
@@ -61,10 +67,9 @@ header {
     transition: all 0.3s ease;
 }
 
-.nav-links a:hover {
+.nav-list a:hover {
     background: linear-gradient(135deg, #5a5a5a, #e94560);
     border: 0.125rem solid #e94560;
-    color: white;
 }
 
 /* MAIN STYLES */
@@ -77,31 +82,35 @@ main {
     gap: 1.25rem;
 }
 
-.hero-photo {
-    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
-    border: 3px solid #e0e0e0;
-    border-radius: 20px;
-    width: 80%;
-    max-width: 25rem;
-    padding: 1.25rem;
-    margin: 0 auto;
+.highlight-box h3 {
     color: white;
+    text-shadow: 0 0 0.5rem black;
+    text-decoration: underline;
+    text-decoration-color: #e94560;
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: bold;
+    margin: 20px 0 1rem;
 }
 
-.hero-photo img {
-    box-shadow: 0 0.25rem 0.9375rem rgba(255, 0, 0, 0.4);
-    border-radius: 50%;
-    margin: 0.625rem 0;
-    max-width: 100%;
-    height: auto;
+.highlight-box p {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 2rem 0;
 }
 
-.hero-photo blockquote {
-    font-family: 'Georgia', serif;
-    font-size: 1.5rem;
-    font-style: italic;
-    color: #e0e0e0;
-    margin: 1.25rem 0;
+.highlight-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    line-height: 1.8;
+    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
+    border: 3px solid white;
+    border-radius: 20px;
+    padding: 1rem;
+    margin: 1rem;
 }
 
 /* FOOTER STYLES */
@@ -118,10 +127,9 @@ footer {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
 }
 
-/* Footer Left and Right Section Styles: Matching Height */
-.footer-left, .footer-right {
+.footer-section {
     flex: 1;
-    padding: 15px; /* Reduced padding for a more compact height */
+    padding: 15px;
     border-radius: 15px;
     border: 2px solid white;
     background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
@@ -132,44 +140,40 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between; /* Distribute content evenly */
+    justify-content: space-between;
     transition: border 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Footer Left Section Content */
-.footer-left p, .footer-left a {
-    margin: 5px 0; /* Reduced margins to condense height */
+.contact-info p {
+    margin: 0;
     color: white;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     text-align: center;
 }
 
-.footer-left a {
+.contact-info a {
     color: #e94560;
     text-decoration: none;
     transition: color 0.3s ease;
+    font-size: 1.5rem;
 }
 
-/* Footer Left Section: Name Styling */
-.footer-left .name {
-    font-size: 1.75rem; /* Larger font size for your name */
-    font-weight: bold;
-    color: #e94560;
-    margin-bottom: 10px;
+.contact-name {
+    font-size: 2.8rem;
+    color: white;
+    text-shadow: 0 0 0.5rem black;
 }
 
-/* Social Media Icons */
 .social-icons {
     display: flex;
     justify-content: center;
-    gap: 30px; /* Increase spacing between icons for better visibility */
-    margin-top: 10px;
+    gap: 40px;
 }
 
 .social-icons a {
     text-decoration: none;
     color: white;
-    font-size: 2.5rem; /* Increased size for better visibility */
+    font-size: 1.8rem;
     transition: color 0.3s ease;
 }
 
@@ -177,8 +181,7 @@ footer {
     color: #e94560;
 }
 
-/* Footer Center Section: Logo */
-.footer-center {
+.logo-section {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,7 +189,7 @@ footer {
     text-align: center;
 }
 
-.footer-center img {
+.logo-section img {
     max-width: 225px;
     max-height: 225px;
     border-radius: 50%;
@@ -195,8 +198,7 @@ footer {
     margin: 0 auto;
 }
 
-/* Footer Right Section: Contact Form */
-.footer-right form {
+.contact-form form {
     background: none;
     margin: 0;
     padding: 0;
@@ -213,38 +215,41 @@ footer {
     flex: 1;
 }
 
-.footer-right label {
-    font-size: 1.2rem; /* Increase font size */
-    font-weight: bold; /* Optional: Makes the text bold for better visibility */
-    line-height: 1.5; /* Optional: Adjusts spacing between lines */
-    color: #f0f0f0;
+.contact-form label {
+    font-size: 1.2rem;
     font-weight: bold;
+    line-height: 1.5;
+    color: #f0f0f0;
     margin-bottom: 0.25rem;
 }
 
-.footer-right input, .footer-right textarea {
+.contact-form input, .contact-form textarea {
     padding: 8px;
     border-radius: 5px;
     font-size: 1.1rem;
     font-family: 'Georgia', serif;
     background: lightgray;
     border: 1px solid #e0e0e0;
-    box-sizing: border-box;
     width: 100%;
     margin-bottom: 10px;
 }
 
-.footer-right textarea {
+.contact-form textarea {
     resize: none;
-    height: 75px; /* Set the height to match the Send button */
-    width: calc(100% - 110px); /* Stretch leaving space for the button */
-    padding: 10px; /* Adjust padding for better alignment */
+    height: 75px;
+    width: calc(100% - 110px);
+    padding: 10px;
 }
 
-/* Send Button */
-.footer-right button {
-    width: 100px; /* Fixed width */
-    height: 75px; /* Set the height to match the textarea */   
+.textarea-container {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.contact-form button {
+    width: 100px;
+    height: 75px;
     background: linear-gradient(135deg, #e94560, #7a2b34);
     color: white;
     border: 2px solid #e94560;
@@ -253,19 +258,15 @@ footer {
     font-size: 1.2rem;
     font-weight: bold;
     transition: all 0.3s ease;
-    margin-left: auto; /* Align button to the right */
+    margin-left: auto;
 }
-          
-/* Send Button - Hover Effect */
-.footer-right button:hover {
-    transform: scale(1.1); /* Slightly enlarge the button */
+
+.contact-form button:hover {
+    transform: scale(1.1);
     border: 2px solid white;
-    background: linear-gradient(135deg, #e94560, #7a2b34);
-    color: white;
     box-shadow: 0 8px 20px rgba(233, 69, 96, 0.5);
 }
 
-/* Sway Animation for Icon */
 @keyframes sway {
     0% {
         transform: rotate(0deg) translateY(0);
@@ -284,74 +285,137 @@ footer {
     }
 }
 
-/* Trigger the Sway Animation on Hover for Icon */
-.footer-right button:hover i {
-    animation: sway 2s ease-in-out infinite; /* Continuous swaying */
+.contact-form button:hover i {
+    animation: sway 2s ease-in-out infinite;
 }
 
-.footer-right input:focus, .footer-right textarea:focus {
-    border-color: #e94560; /* Changes the border color to red */
-    outline: none; /* Removes the default outline */
-    box-shadow: 0px 0px 4px 4px rgba(233, 69, 96, 0.5); /* Optional: Adds a subtle glow effect */
+.contact-form input:focus, .contact-form textarea:focus {
+    border-color: #e94560;
+    outline: none;
+    box-shadow: 0px 0px 4px 4px rgba(233, 69, 96, 0.5);
 }
 
-/* Footer Hover Effects */
-.footer-left:hover, .footer-right:hover {
+.footer-section:hover {
     border-color: #e94560;
     box-shadow: 0 8px 20px rgba(233, 69, 96, 0.5);
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    footer {
-        flex-direction: column;
-        text-align: center;
-        padding: 10px;
-    }
-
-    .footer-left, .footer-center, .footer-right {
-        max-width: 100%;
-        margin: 10px 0;
-    }
-
-    .footer-right input, .footer-right textarea {
-        max-width: 100%;
-    }
-}
-
-.funny-color h3{
-    color: white;
-    text-shadow: 0 0 0.5rem black;
-    text-decoration: underline;
-    text-decoration-color: #e94560;
-    font-size: 2.5rem;
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    margin-top: 1rem;
-}
-
-.funny-color p{
-    color: white;
-    font-size: 2.0rem;
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    margin: 2.0rem;
-}
-
-.funny-color {
+.footer-flip {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
-    border: 3px solid white;
-    border-radius: 20px;
-    padding: 1rem;
-    margin: 1rem;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+    perspective: 1000px;
+    margin-top: 1rem;
 }
 
+.footer-flip .circle {
+    width: 225px;
+    height: 225px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease-in-out;
+    cursor: pointer;
+}
+
+.footer-flip .circle img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 50%;
+    box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
+    margin: 0 auto;
+}
+
+.footer-flip .circle .back {
+    border: 3px solid white;
+    transform: rotateY(180deg);
+}
+
+.footer-flip .circle.flip {
+    transform: rotateY(180deg);
+}
+
+.footer-flip .flip-text {
+    font-size: 1.6rem;
+    color: darkgray;
+    text-align: center;
+    text-decoration: italic;
+    margin-top: 1rem;
+    line-height: 1.5;
+}
+
+/* Media Queries for Mobile Devices */
+@media (max-width: 768px) {
+    body {
+        padding: 0 1rem;
+    }
+
+    header, .navbar, .nav-list, footer {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .nav-list {
+        gap: 1rem;
+    }
+
+    .nav-list a {
+        font-size: 1.2rem;
+        padding: 0.75rem;
+    }
+
+    main {
+        padding: 1.5rem;
+    }
+
+    .highlight-box h3 {
+        font-size: 2.5rem;
+    }
+
+    .highlight-box p {
+        font-size: 1.5rem;
+    }
+
+    .footer-section {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+
+    .contact-info p, .contact-info a {
+        font-size: 1.2rem;
+    }
+
+    .contact-name {
+        font-size: 2rem;
+    }
+
+    .social-icons {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .social-icons a {
+        font-size: 1.5rem;
+    }
+
+    .footer-flip .circle {
+        width: 150px;
+        height: 150px;
+    }
+
+    .footer-flip .flip-text {
+        font-size: 1.2rem;
+    }
+
+    .contact-form input, .contact-form textarea {
+        font-size: 1rem;
+    }
+
+    .contact-form button {
+        width: 80px;
+        height: 60px;
+        font-size: 1rem;
+    }
+}
