--- a/css/main.css
+++ b/css/main.css
@@ -1,139 +1,192 @@
-/* Import Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-/* GLOBAL STYLES */
 body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    background: linear-gradient(135deg, #2a0000, #200000, #000000, #000000, #200000, #2a0000);
+    color: #ffffff;
+    font-family: 'Orbitron', sans-serif;
+    letter-spacing: 0.05em;
     overflow-x: hidden;
-    background: linear-gradient(135deg, #e94560, #000000, #3a3a3a, #000000, #e94560);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    font-family: 'Gentium Book Plus', serif;
-}
-
-/* HEADER STYLES */
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(135deg, #0f0f0f, #3a3a3a, #000000);
-    border: 3px solid white;
-    border-radius: 20px;
-    padding: .5rem;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.navbar {
-    max-width: 1200px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 1rem;
-}
-
-.nav-list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    list-style: none;
-    gap: 5rem;
+    border-left: 5px solid #444444;
+    border-right: 5px solid #444444;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
-.nav-list a {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-family: 'Arial', sans-serif;
-    font-weight: bold;
-    padding: 1.25rem;
-    border-radius: 20px;
-    border: 0.125rem solid transparent;
-    transition: all 0.3s ease;
-}
-
-.nav-list a:hover {
-    background: linear-gradient(135deg, #5a5a5a, #e94560);
-    border: 0.125rem solid #e94560;
-}
-
-/* MAIN STYLES */
-main {
+.top-row {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    padding: 10px;
+}
+
+.bar {
+    width: 45%;
+    border-top: 2px solid #888888;
+    border-bottom: 2px solid #888888;
+    padding: 15px 0;
+    border-radius: 10px;
+    margin-left: 5px;
+}
+
+button {
+    font-size: .9rem;
+    font-weight: bold;
+    margin: 0 5px;
+    padding: 10px;
+    border: 2px solid #888888;
+    color: #ffffff;
+    background-color: #2a0000;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 4px 8px rgba(255, 0, 0, 0.6), 0 0 10px rgba(255, 0, 0, 0.4);
+}
+
+button.circle {
+    border-radius: 50%;
+    background-color: #200000;
+}
+
+button.oval {
+    border-radius: 30px;
+    width: 7rem;
+    padding: 11px 0;
+    margin-left: auto;
+    background-color: #2a0000;
+}
+
+button.square {
+    border-radius: 10px;
+    width: 10rem;
+    padding: 14px 0;
+    background-color: #200000;
+    margin-left: auto;
+}
+
+.section {
+    border: 2px solid #888;
+    border-radius: 10px;
+    letter-spacing: 0.05em;
     text-align: center;
-    padding: 3.125rem;
-    gap: 1.25rem;
+    padding: 10px;
 }
 
-.highlight-box h3 {
-    color: white;
-    text-shadow: 0 0 0.5rem black;
-    text-decoration: underline;
-    text-decoration-color: #e94560;
+.section:nth-child(odd) {
+    background-color: #200000;
+}
+
+.section:nth-child(even) {
+    background-color: #2a0000;
+}
+
+.section-header {
     font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: bold;
-    margin: 20px 0 1rem;
+    margin: 50px 0;
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
 }
 
-.highlight-box p {
-    color: white;
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 2rem 0;
+.row-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 10px;
+    grid-auto-rows: repeat(auto-fill, 100px);
 }
 
-.highlight-box {
+.section-welcome {
+    font-size: 1.4rem;
+}
+
+.section-welcome h1 {
+    margin: 20px 0 35px 0;
+    font-size: 2.8rem;
+    text-decoration: underline;
+}
+
+.section-image {
+    display: flex;
+    justify-content: center;
+    font-size: 1.4rem;
+    align-items: center;
+}
+
+.section-image img {
+    margin: 20px 0;
+    border-radius: 50%;
+    max-width: 350px;
+    max-height: 350px;
+}
+
+.section-skills {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    line-height: 1.8;
-    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
-    border: 3px solid white;
-    border-radius: 20px;
-    padding: 1rem;
-    margin: 1rem;
 }
 
-/* FOOTER STYLES */
+.section-skills h1 {
+    font-size: 2.8rem;
+    text-decoration: underline;
+    margin: 20px 0;
+}
+
+.section-skills ul {
+    display: grid;
+    text-align: left;
+    gap: 5px 40px;
+    font-size: 1.4rem;
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+.section-skills h2 {
+    font-size: 2.2rem;
+    text-decoration: underline;
+    margin: 20px 0 10px 0;
+}
+
+.section-skills p {
+    font-size: 1.4rem;
+}
+
+.section-about {
+    width: 75%;
+    margin: 10px auto 10px;
+    font-size: 1.6rem;
+}
+
+.section-about h1 {
+    font-size: 3.0rem;
+    text-decoration: underline;
+    margin: 20px 0 40px 0;
+}
+
 footer {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
     gap: 1rem;
-    padding: 10px;
-    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
-    border: 3px solid white;
-    border-radius: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+    padding: 20px;
+    background: linear-gradient(135deg, #2a0000, #200000, #000000);
+    border: 2px solid #888888;
+    border-radius: 15px;
+    font-family: 'Orbitron', sans-serif;
+    color: #ffffff;
 }
 
 .footer-section {
     flex: 1;
     padding: 15px;
     border-radius: 15px;
-    border: 2px solid white;
-    background: linear-gradient(135deg, #000000, #3a3a3a, #000000);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+    border: 2px solid #888888;
+    background-color: #200000;
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
     max-width: 450px;
     width: 100%;
     margin: 10px;
@@ -178,7 +231,8 @@ footer {
 }
 
 .social-icons a:hover {
-    color: #e94560;
+    transform: scale(1.2); 
+    color: #e94560; 
 }
 
 .logo-section {
@@ -193,8 +247,8 @@ footer {
     max-width: 225px;
     max-height: 225px;
     border-radius: 50%;
-    border: 3px solid white;
-    box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
+    border: 2px solid #888888;
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
     margin: 0 auto;
 }
 
@@ -229,7 +283,7 @@ footer {
     font-size: 1.1rem;
     font-family: 'Georgia', serif;
     background: lightgray;
-    border: 1px solid #e0e0e0;
+    border: 2px solid #888888;
     width: 100%;
     margin-bottom: 10px;
 }
@@ -263,8 +317,8 @@ footer {
 
 .contact-form button:hover {
     transform: scale(1.1);
-    border: 2px solid white;
-    box-shadow: 0 8px 20px rgba(233, 69, 96, 0.5);
+    border: 2px solid #ffffff;
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
 }
 
 @keyframes sway {
@@ -290,14 +344,14 @@ footer {
 }
 
 .contact-form input:focus, .contact-form textarea:focus {
-    border-color: #e94560;
+    border-color: #2a0000;
     outline: none;
-    box-shadow: 0px 0px 4px 4px rgba(233, 69, 96, 0.5);
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
 }
 
 .footer-section:hover {
-    border-color: #e94560;
-    box-shadow: 0 8px 20px rgba(233, 69, 96, 0.5);
+    border-color: #2a0000;
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
 }
 
 .footer-flip {
@@ -324,12 +378,12 @@ footer {
     position: absolute;
     backface-visibility: hidden;
     border-radius: 50%;
-    box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
+    box-shadow: 0 0 14px rgba(255, 0, 0, 0.6);
     margin: 0 auto;
 }
 
 .footer-flip .circle .back {
-    border: 3px solid white;
+    border: 2px solid #888888;
     transform: rotateY(180deg);
 }
 
@@ -339,83 +393,19 @@ footer {
 
 .footer-flip .flip-text {
     font-size: 1.6rem;
-    color: darkgray;
+    color: #ffffff;
     text-align: center;
     text-decoration: italic;
     margin-top: 1rem;
     line-height: 1.5;
 }
 
-/* Media Queries for Mobile Devices */
 @media (max-width: 768px) {
-    body {
-        padding: 0 1rem;
-    }
-
-    header, .navbar, .nav-list, footer {
+    footer {
         flex-direction: column;
-        padding: 1rem;
+        align-items: center;
     }
-
-    .nav-list {
-        gap: 1rem;
-    }
-
-    .nav-list a {
-        font-size: 1.2rem;
-        padding: 0.75rem;
-    }
-
-    main {
-        padding: 1.5rem;
-    }
-
-    .highlight-box h3 {
-        font-size: 2.5rem;
-    }
-
-    .highlight-box p {
-        font-size: 1.5rem;
-    }
-
     .footer-section {
         max-width: 100%;
-        margin: 10px 0;
-    }
-
-    .contact-info p, .contact-info a {
-        font-size: 1.2rem;
-    }
-
-    .contact-name {
-        font-size: 2rem;
-    }
-
-    .social-icons {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .social-icons a {
-        font-size: 1.5rem;
-    }
-
-    .footer-flip .circle {
-        width: 150px;
-        height: 150px;
-    }
-
-    .footer-flip .flip-text {
-        font-size: 1.2rem;
-    }
-
-    .contact-form input, .contact-form textarea {
-        font-size: 1rem;
-    }
-
-    .contact-form button {
-        width: 80px;
-        height: 60px;
-        font-size: 1rem;
     }
 }
