--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,25 @@ body {
     padding: 15px 0;
     border-radius: 10px;
     margin-left: 5px;
+    margin-left: 10px;
+}
+
+.info-bar {
+    display: flex;
+    justify-content: space-between; 
+    padding: 10px 20px;
+    background-color: #2a0000;
+    border: 2px solid #444;
+    border-radius: 10px;
+    color: #fff;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+}
+
+#date-time {
+    margin-left: auto; /* Moves the date-time to the far right */
+    margin-right: 40px; /* Adjust the right margin as needed */
 }
 
 button {
@@ -401,10 +420,44 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .top-row {
+        flex-direction: column;
+        align-items: center;
+
+    .bar {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .info-bar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .date-time {
+        margin: 10px 0;
+    }
+
+    .section-header {
+        font-size: 2.5rem;
+        margin: 30px 0;
+    }
+
+    .row-3 {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .section-skills ul {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
     footer {
         flex-direction: column;
         align-items: center;
     }
+
     .footer-section {
         max-width: 100%;
     }
