--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,6 @@ body {
     border-bottom: 2px solid #888888;
     padding: 15px 0;
     border-radius: 10px;
-    margin-left: 5px;
     margin-left: 10px;
 }
 
@@ -423,6 +422,7 @@ footer {
     .top-row {
         flex-direction: column;
         align-items: center;
+    }
 
     .bar {
         width: 100%;
